    in error situation.
  * Fixed possible uninitialized memory problem in _osso_hw_state_get().
  * Fixed brain-damage in osso_hw_set_event_cb() that would have caused
    memory leaks with each subsequent call after the first one.
  * Fixed reading the current device state from file - it was completely
    broken (used wrong member of the Libosso context struct).
  * Re-run automake-1.7.
  * Added some files required by automake-1.7.
  * Rewrote most of the code in osso-hw.c.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 29 Aug 2005 18:08:13 +0300

libosso (0.9.14-1) unstable; urgency=low

  * Fixed a memory leak in initialisation (bug 16209).
  * Now freeing autosave callback in osso_deinitialize.
  * Now freeing interface member of ifs elements in osso_deinitialize.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 25 Aug 2005 09:36:44 +0300

libosso (0.9.13-1) unstable; urgency=low

  * Added support for environment variable LIBOSSO_CP_PLUGIN_DIRS to
    osso_cp_plugin_execute (bug 17720).
  * Now osso_state_read accepts zero as the state_size and NULL for
    state_data (bug 17743).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 23 Aug 2005 17:46:22 +0300

libosso (0.9.12-1) unstable; urgency=low

  * Added osso_application_name_get and osso_application_version_get
    (bug 15018).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 15 Aug 2005 18:13:57 +0300

libosso (0.9.11-1) unstable; urgency=low

  * Added workaround for signal eating problem (bug 16802).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 09 Aug 2005 14:36:13 +0300

libosso (0.9.10-3) unstable; urgency=low

  * Some cleanups before publishing.
  * Checked through all the function comments in libosso.h and rephrased
    some of them for clarity. Also, corrected typos and modified some
    example code.
  * Added COPYING file.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 05 Aug 2005 15:32:56 +0300